<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_create_user"
        android:title="Create User"
        android:icon="@drawable/ic_admin"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_change_password"
        android:title="@string/change_password"
        android:icon="@drawable/ic_settings"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        android:iconTint="@color/colorError"
        app:showAsAction="never"/>
</menu>